[gd_scene load_steps=21 format=3 uid="uid://cqw8x7nk3dmvp"]

[ext_resource type="Script" path="res://scenes/battle/battle_scene.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://unit_scene" path="res://scenes/battle/components/unit.tscn" id="8_unit"]
[ext_resource type="Texture2D" path="res://assets/sprites/world/grass-ground-rdy.png" id="2_grass"]
[ext_resource type="Shader" path="res://assets/shaders/ground_terrain.gdshader" id="3_shader"]
[ext_resource type="Texture2D" path="res://assets/sprites/world/tree-rdy.png" id="4_tree"]
[ext_resource type="Texture2D" path="res://assets/sprites/world/house-rdy.png" id="5_house"]
[ext_resource type="Texture2D" path="res://assets/sprites/world/oxcart-rdy.png" id="6_oxcart"]
[ext_resource type="FontFile" path="res://assets/alfabet98.ttf" id="7_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.45, 0.55, 0.75, 1)
sky_horizon_color = Color(0.75, 0.7, 0.6, 1)
ground_bottom_color = Color(0.25, 0.22, 0.18, 1)
ground_horizon_color = Color(0.55, 0.5, 0.42, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_source = 2
ambient_light_color = Color(0.95, 0.9, 0.8, 1)
ambient_light_energy = 0.3
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(100, 100)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ground"]
shader = ExtResource("3_shader")
shader_parameter/ground_texture = ExtResource("2_grass")
shader_parameter/grass_tint = Color(0.4, 0.6, 0.3, 1)
shader_parameter/noise_scale = 2.0
shader_parameter/grass_threshold = 0.5
shader_parameter/blend_softness = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_post"]
top_radius = 0.3
bottom_radius = 0.3
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wood"]
albedo_color = Color(0.3, 0.2, 0.15, 1)
roughness = 0.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_victory"]
bg_color = Color(0.1, 0.08, 0.05, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.831, 0.686, 0.216, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 40.0
content_margin_top = 30.0
content_margin_right = 40.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="hp_frame"]
bg_color = Color(0.1, 0.08, 0.05, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.831, 0.686, 0.216, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="hp_bg"]
bg_color = Color(0.15, 0.12, 0.1, 1.0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.35, 0.25, 1.0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="hp_fill_player"]
bg_color = Color(0.25, 0.55, 0.25, 1.0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="hp_fill_enemy"]
bg_color = Color(0.65, 0.25, 0.25, 1.0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="hp_fill_critical"]
bg_color = Color(0.8, 0.15, 0.15, 1.0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="discovery_popup_style"]
bg_color = Color(0.05, 0.04, 0.03, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.831, 0.686, 0.216, 0.8)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[node name="BattleScene" type="Node3D"]
script = ExtResource("1_script")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, 0, 10, 0)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ground")
surface_material_override/0 = SubResource("ShaderMaterial_ground")

[node name="WorldObjects" type="Node3D" parent="."]

[node name="Tree_0" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 2, -30)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_1" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 2, -25)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_2" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 2, 35)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_3" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 2, 28)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_4" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 2, -40)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_5" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 2, -38)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_6" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 2, 15)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="Tree_7" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 2, 0)
pixel_size = 0.01
billboard = 1
texture_filter = 0
texture = ExtResource("4_tree")

[node name="House_0" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1.8, 8)
pixel_size = 0.008
billboard = 1
texture_filter = 0
texture = ExtResource("5_house")

[node name="Oxcart_0" type="Sprite3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 10)
pixel_size = 0.006
billboard = 1
texture_filter = 0
texture = ExtResource("6_oxcart")

[node name="Boundaries" type="Node3D" parent="."]

[node name="Post_NW" type="MeshInstance3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 1.5, -50)
mesh = SubResource("CylinderMesh_post")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="Post_NE" type="MeshInstance3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 1.5, -50)
mesh = SubResource("CylinderMesh_post")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="Post_SW" type="MeshInstance3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 1.5, 50)
mesh = SubResource("CylinderMesh_post")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="Post_SE" type="MeshInstance3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 1.5, 50)
mesh = SubResource("CylinderMesh_post")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="Unit" parent="." instance=ExtResource("8_unit")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="EnemyUnit" parent="." instance=ExtResource("8_unit")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, -20)

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 8, 12)
current = true
fov = 60.0

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="PlayerHPPanel" type="MarginContainer" parent="UI"]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 80.0

[node name="OrnateFrame" type="PanelContainer" parent="UI/PlayerHPPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("hp_frame")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayerHPPanel/OrnateFrame"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CommanderName" type="Label" parent="UI/PlayerHPPanel/OrnateFrame/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 1)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 20
text = "Åžemsettin"

[node name="HealthBarContainer" type="HBoxContainer" parent="UI/PlayerHPPanel/OrnateFrame/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="UI/PlayerHPPanel/OrnateFrame/VBoxContainer/HealthBarContainer"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
theme_override_styles/background = SubResource("hp_bg")
theme_override_styles/fill = SubResource("hp_fill_player")
max_value = 2000.0
value = 2000.0
show_percentage = false

[node name="TroopCountLabel" type="Label" parent="UI/PlayerHPPanel/OrnateFrame/VBoxContainer/HealthBarContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 0.8)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 14
text = "2000/2000"

[node name="EnemyHPPanel" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="OrnateFrame" type="PanelContainer" parent="UI/EnemyHPPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("hp_frame")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EnemyHPPanel/OrnateFrame"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CommanderName" type="Label" parent="UI/EnemyHPPanel/OrnateFrame/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 1)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 20
text = "Yorgos"
horizontal_alignment = 2

[node name="HealthBarContainer" type="HBoxContainer" parent="UI/EnemyHPPanel/OrnateFrame/VBoxContainer"]
layout_mode = 2
layout_direction = 1
theme_override_constants/separation = 8

[node name="TroopCountLabel" type="Label" parent="UI/EnemyHPPanel/OrnateFrame/VBoxContainer/HealthBarContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 0.8)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 14
text = "2000/2000"

[node name="HealthBar" type="ProgressBar" parent="UI/EnemyHPPanel/OrnateFrame/VBoxContainer/HealthBarContainer"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
theme_override_styles/background = SubResource("hp_bg")
theme_override_styles/fill = SubResource("hp_fill_enemy")
max_value = 2000.0
value = 2000.0
show_percentage = false
fill_mode = 1

[node name="ControlsHUD" type="MarginContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlsHUD"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/ControlsHUD/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 0.7)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 18
text = "WASD - Move | Q/E - Rotate"

[node name="PhaseLabel" type="Label" parent="UI/ControlsHUD/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 0.5)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 14
text = "Phase 5: Enemy Unit"

[node name="MuteButton" type="Button" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 20
text = "ðŸ”Š"

[node name="DiscoveryPopup" type="CenterContainer" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="PanelContainer" parent="UI/DiscoveryPopup"]
layout_mode = 2
theme_override_styles/panel = SubResource("discovery_popup_style")

[node name="DiscoveryLabel" type="Label" parent="UI/DiscoveryPopup/Panel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 1)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 22
text = "Åžemsettin has spotted Yorgos!"
horizontal_alignment = 1

[node name="DamageNumbersContainer" type="Control" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TransitionLayer" type="CanvasLayer" parent="UI"]
layer = 10

[node name="FadeRect" type="ColorRect" parent="UI/TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VictoryPopup" type="CenterContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="UI/VictoryPopup"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_victory")

[node name="VBox" type="VBoxContainer" parent="UI/VictoryPopup/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="UI/VictoryPopup/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831, 0.686, 0.216, 1)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="UI/VictoryPopup/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.99, 0.82, 0.8)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 24
text = "Enemy Defeated"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="UI/VictoryPopup/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="PlayAgainButton" type="Button" parent="UI/VictoryPopup/Panel/VBox/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="UI/VictoryPopup/Panel/VBox/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 20
text = "Main Menu"
